Updated portfolio with e-commerce project

--- a/index.html
+++ b/index.html
@@ -155,19 +155,19 @@
         </div>
         <div class="project-card" data-aos="fade-up" data-aos-delay="200">
           <div class="project-image" data-aos="zoom-in" data-aos-delay="300">
-            <img src="./images/chatbot.png" alt="AI Chatbot Interface Screenshot" loading="lazy">
+            <img src="./images/ecommerce_project.png" alt="Fashion Store E-commerce Website" loading="lazy">
           </div>
           <div class="project-content">
-            <h3>AI Chatbot Interface</h3>
-            <p>A modern chatbot implementation with natural language processing and smooth UI interactions.</p>
+            <h3>Fashion Store E-commerce</h3>
+            <p>A full-featured e-commerce platform with product catalog, shopping cart, and user authentication. Features responsive design and seamless shopping experience.</p>
             <div class="project-tech">
+              <span>HTML5</span>
+              <span>CSS3</span>
               <span>JavaScript</span>
-              <span>HTML/CSS</span>
-              <span>AI Integration</span>
             </div>
             <div class="project-links">
               <a href="#" class="btn-small"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-              <a href="#" class="btn-small"><i class="fab fa-github"></i> Source Code</a>
+              <a href="https://github.com/Harish-7705/E-commerce-project" class="btn-small"><i class="fab fa-github"></i> Source Code</a>
             </div>
           </div>
         </div>
