--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             </div>
             <div class="project-links">
               <a href="#" class="btn-small"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-              <a href="https://github.com/Harish-7705/E-commerce-project" class="btn-small"><i class="fab fa-github"></i> Source Code</a>
+              <a href="https://harish-7705.github.io/Ecommerce-website/" class="btn-small"><i class="fab fa-github"></i> Source Code</a>
             </div>
           </div>
         </div>
@@ -184,7 +184,7 @@
               <span>Prototyping</span>
             </div>
             <div class="project-links">
-              <a href="#" class="btn-small"><i class="fas fa-external-link-alt"></i> Case Study</a>
+              <a href="https://www.figma.com/proto/HtkQlQiIk1GlOay4iu87YJ/Gpay?page-id=0%3A1&node-id=3-15&viewport=-422%2C309%2C0.17&t=dAqlJKhmLa72fCqF-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=3%3A7" class="btn-small"><i class="fas fa-external-link-alt"></i> Case Study</a>
             </div>
           </div>
         </div>
