--- a/index.html
+++ b/index.html
@@ -171,6 +171,23 @@
             </div>
           </div>
         </div>
+        <div class="project-card" data-aos="fade-up" data-aos-delay="400">
+          <div class="project-image" data-aos="zoom-in" data-aos-delay="500">
+            <img src="./images/Whatsapp.png" alt="WhatsApp Calendar UI/UX Design" loading="lazy">
+          </div>
+          <div class="project-content">
+            <h3>WhatsApp Calendar UI/UX Design</h3>
+            <p>A modern UI/UX redesign concept for WhatsApp's calendar and event scheduling feature.</p>
+            <div class="project-tech">
+              <span>Figma</span>
+              <span>UI/UX</span>
+              <span>Prototyping</span>
+            </div>
+            <div class="project-links">
+              <a href="https://www.figma.com/proto/GNBgihRD63soRn2iuPoH8q/Color-Crew?page-id=46%3A2&node-id=171-2&starting-point-node-id=171%3A2&t=XktVFFC8IvJHeiQJ-1" class="btn-small"><i class="fas fa-external-link-alt"></i> Prototype</a>
+            </div>
+          </div>
+        </div>
         <div class="project-card" data-aos="fade-up" data-aos-delay="300">
           <div class="project-image" data-aos="zoom-in" data-aos-delay="400">
             <img src="./images/nearby_deals.png" alt="GPay Nearby Deals UI/UX Design" loading="lazy">
