--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <meta name="description" content="Harish S - UI/UX Designer and Frontend Developer Portfolio">
   <title>Harish S | UI/UX Designer & Frontend Developer</title>
-  <link rel="icon" type="image/jpg" href="./images/meicon.png">
-  <link rel="apple-touch-icon" href="./images/profile.jpg">
+  <link rel="icon" type="image/jpg" href="./images/profile.jpg">
+  <link rel="apple-touch-icon" href="./images/meicon.png">
   <link rel="stylesheet" href="style.css"/>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"/>
   <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -27,7 +27,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="#resume">Resume</a></li>
+          <li><a href="certificates.html">Certificates</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><button id="darkModeToggle" aria-label="Toggle Dark Mode"><i class="fas fa-moon"></i></button></li>
         </ul>
@@ -55,9 +55,9 @@
               <i class="fab fa-github"></i>
             </a>
             <a href="https://www.linkedin.com/in/harish-s-25a47a29a" target="_blank" rel="noopener noreferrer" class="social-btn">
-              <i class="fab fa-linkedin"></i>
+              <i class="fab fa-linkedin"></i>1
             </a>
-            <a href="mailto:harish45231234@gmail.com" class="social-btn">
+            <a href="mailto:harish.s7705@gmail.com" class="social-btn">
               <i class="fas fa-envelope"></i>
             </a>
           </div>
@@ -171,23 +171,6 @@
             </div>
           </div>
         </div>
-        <div class="project-card" data-aos="fade-up" data-aos-delay="400">
-          <div class="project-image" data-aos="zoom-in" data-aos-delay="500">
-            <img src="./images/Whatsapp.png" alt="WhatsApp Calendar UI/UX Design" loading="lazy">
-          </div>
-          <div class="project-content">
-            <h3>WhatsApp Calendar UI/UX Design</h3>
-            <p>A modern UI/UX redesign concept for WhatsApp's calendar and event scheduling feature.</p>
-            <div class="project-tech">
-              <span>Figma</span>
-              <span>UI/UX</span>
-              <span>Prototyping</span>
-            </div>
-            <div class="project-links">
-              <a href="https://www.figma.com/proto/GNBgihRD63soRn2iuPoH8q/Color-Crew?page-id=46%3A2&node-id=171-2&starting-point-node-id=171%3A2&t=XktVFFC8IvJHeiQJ-1" class="btn-small"><i class="fas fa-external-link-alt"></i> Prototype</a>
-            </div>
-          </div>
-        </div>
         <div class="project-card" data-aos="fade-up" data-aos-delay="300">
           <div class="project-image" data-aos="zoom-in" data-aos-delay="400">
             <img src="./images/nearby_deals.png" alt="GPay Nearby Deals UI/UX Design" loading="lazy">
@@ -205,6 +188,23 @@
             </div>
           </div>
         </div>
+        <div class="project-card" data-aos="fade-up" data-aos-delay="400">
+          <div class="project-image" data-aos="zoom-in" data-aos-delay="500">
+            <img src="./images/Whatsapp.png" alt="WhatsApp Calendar UI/UX Design" loading="lazy">
+          </div>
+          <div class="project-content">
+            <h3>WhatsApp Calendar UI/UX Design</h3>
+            <p>A modern UI/UX redesign concept for WhatsApp's calendar and event scheduling feature.</p>
+            <div class="project-tech">
+              <span>Figma</span>
+              <span>UI/UX</span>
+              <span>Prototyping</span>
+            </div>
+            <div class="project-links">
+              <a href="https://www.figma.com/proto/GNBgihRD63soRn2iuPoH8q/Color-Crew?page-id=46%3A2&node-id=171-2&starting-point-node-id=171%3A2&t=XktVFFC8IvJHeiQJ-1" class="btn-small"><i class="fas fa-external-link-alt"></i> Prototype</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -216,7 +216,7 @@
         <div class="contact-info" data-aos="fade-right" data-aos-delay="100">
           <div class="contact-item" data-aos="fade-up" data-aos-delay="200">
             <i class="fas fa-envelope"></i>
-            <p>Email : <a href="mailto:harish45231234@gmail.com">harish45231234@gmail.com</a></p>
+            <p>Email : <a href="mailto:harish.s7705@gmail.com">harish.s7705@gmail.com</a></p>
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="300">
             <i class="fas fa-phone"></i>
@@ -228,8 +228,8 @@
           </div>
         </div>
         <form action="https://api.web3forms.com/submit" method="POST" class="contact-form" data-aos="fade-left" data-aos-delay="100">
-          <input type="hidden" name="access_key" value="fb24fa10-83b7-483c-917d-c9f1fcfe9d19">
-          <input type="hidden" name="subject" value="New Contact Form Submission - Portfolio">
+          <input type="hidden" name="access_key" value="7d473dc5-9956-4f74-9972-ffe680f529bc">
+          <input type="hidden" name="subject" value="New Contact - Portfolio">
           <input type="hidden" name="from_name" value="Portfolio Website">
           <div class="form-group" data-aos="fade-up" data-aos-delay="200">
             <input type="text" name="name" placeholder="Your Name" required />
