--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
               <i class="fab fa-github"></i>
             </a>
             <a href="https://www.linkedin.com/in/harish-s-25a47a29a" target="_blank" rel="noopener noreferrer" class="social-btn">
-              <i class="fab fa-linkedin"></i>1
+              <i class="fab fa-linkedin"></i>
             </a>
             <a href="mailto:harish.s7705@gmail.com" class="social-btn">
               <i class="fas fa-envelope"></i>
