--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
-          <li><a href="certificates.html">Certificates</a></li>
           <li><a href="#contact">Contact</a></li>
           <li><button id="darkModeToggle" aria-label="Toggle Dark Mode"><i class="fas fa-moon"></i></button></li>
         </ul>
@@ -57,7 +56,7 @@
             <a href="https://www.linkedin.com/in/harish-s-25a47a29a" target="_blank" rel="noopener noreferrer" class="social-btn">
               <i class="fab fa-linkedin"></i>1
             </a>
-            <a href="mailto:harish45231234@gmail.com" class="social-btn">
+            <a href="mailto:harish.s7705@gmail.com" class="social-btn">
               <i class="fas fa-envelope"></i>
             </a>
           </div>
@@ -216,7 +215,7 @@
         <div class="contact-info" data-aos="fade-right" data-aos-delay="100">
           <div class="contact-item" data-aos="fade-up" data-aos-delay="200">
             <i class="fas fa-envelope"></i>
-            <p>Email : <a href="mailto:harish45231234@gmail.com">harish45231234@gmail.com</a></p>
+            <p>Email : <a href="mailto:harish.s7705@gmail.com">harish.s7705@gmail.com</a></p>
           </div>
           <div class="contact-item" data-aos="fade-up" data-aos-delay="300">
             <i class="fas fa-phone"></i>
@@ -228,8 +227,8 @@
           </div>
         </div>
         <form action="https://api.web3forms.com/submit" method="POST" class="contact-form" data-aos="fade-left" data-aos-delay="100">
-          <input type="hidden" name="access_key" value="fb24fa10-83b7-483c-917d-c9f1fcfe9d19">
-          <input type="hidden" name="subject" value="New Contact Form Submission - Portfolio">
+          <input type="hidden" name="access_key" value="7d473dc5-9956-4f74-9972-ffe680f529bc">
+          <input type="hidden" name="subject" value="New Contact - Portfolio">
           <input type="hidden" name="from_name" value="Portfolio Website">
           <div class="form-group" data-aos="fade-up" data-aos-delay="200">
             <input type="text" name="name" placeholder="Your Name" required />
