attandanace project add

--- a/index.html
+++ b/index.html
@@ -134,6 +134,26 @@
     <div class="container">
       <h2 class="section-title" data-aos="fade-up">Featured Projects</h2>
       <div class="project-grid">
+        <div class="project-card" data-aos="fade-up" data-aos-delay="300">
+          <div class="project-image" data-aos="zoom-in" data-aos-delay="400">
+            <img src="./images/Attendane management system.png" alt="Attendance Management System" loading="lazy">
+          </div>
+          <div class="project-content">
+            <h3>Attendance Management System</h3>
+            <p>A web application to manage and track employee attendance efficiently.</p>
+            <div class="project-tech">
+              <span>Html</span>
+              <span>Css</span>
+              <span>JavaScript</span>
+              <span>Node.js</span>
+              <span>MySQL</span>
+            </div>
+            <div class="project-links">
+              <a href="https://github.com/Harish-7705/Attendance-Management-System" class="btn-small"><i class="fas fa-external-link-alt"></i> Github Link</a>
+            </div>
+          </div>
+        </div>
+
         <div class="project-card" data-aos="fade-up" data-aos-delay="100">
           <div class="project-image" data-aos="zoom-in" data-aos-delay="200">
             <img src="./images/loan_approval.png" alt="Loan Approval Prediction System Interface" loading="lazy">
@@ -152,6 +172,7 @@
             </div>
           </div>
         </div>
+        
         <div class="project-card" data-aos="fade-up" data-aos-delay="200">
           <div class="project-image" data-aos="zoom-in" data-aos-delay="300">
             <img src="./images/ecommerce_project.png" alt="Fashion Store E-commerce Website" loading="lazy">
