--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="hero-image" data-aos="fade-left">
           <div class="profile-img hero-profile">
-            <img src="./images/profile.jpg" alt="Harish S - Professional Portrait" />
+            <img src="./images/me21.png" alt="Harish S - Professional Portrait" />
           </div>
         </div>
       </div>
@@ -76,8 +76,7 @@
       <div class="about-grid">
         <div class="about-image" data-aos="fade-right">
           <div class="profile-img about-profile">
-            <img src="./images/me2.jpg" alt="Harish S - Working" />
-            <div class="image-overlay"></div>
+            <img src="./images/me21.png" alt="Harish S - Working" />
           </div>
         </div>
         <div class="about-content" data-aos="fade-left">
@@ -115,7 +114,6 @@
           <div class="skills-grid">
             <div class="skill-item" data-aos="zoom-in" data-aos-delay="300"><i class="fab fa-python"></i> Python</div>
             <div class="skill-item" data-aos="zoom-in" data-aos-delay="400"><i class="fab fa-java"></i> Java</div>
-            <div class="skill-item" data-aos="zoom-in" data-aos-delay="500"><i class="fas fa-code"></i> C++</div>
           </div>
         </div>
         <div class="skill-category" data-aos="fade-up" data-aos-delay="300">
@@ -124,6 +122,8 @@
             <div class="skill-item" data-aos="zoom-in" data-aos-delay="400"><i class="fab fa-figma"></i> Figma</div>
             <div class="skill-item" data-aos="zoom-in" data-aos-delay="500"><i class="fab fa-git-alt"></i> Git</div>
             <div class="skill-item" data-aos="zoom-in" data-aos-delay="600"><i class="fab fa-node-js"></i> Node.js</div>
+            <div class="skill-item" data-aos="zoom-in" data-aos-delay="700"><i class="fas fa-database"></i> MySQL</div>
+            
           </div>
         </div>
       </div>
