--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
         <div class="hero-image" data-aos="fade-left">
           <div class="profile-img hero-profile">
-            <img src="./images/me21.png" alt="Harish S - Professional Portrait" />
+            <img src="./images/profile.jpg" alt="Harish S - Professional Portrait" />
           </div>
         </div>
       </div>
@@ -82,6 +82,7 @@
         <div class="about-content" data-aos="fade-left">
           <div class="about-text">
             <p>I'm a passionate B.Tech IT student specializing in UI/UX design and frontend development. With hands-on experience in building real-world applications, I combine technical expertise with creative design thinking to create engaging user experiences.</p>
+            <br>
             <p>My focus areas include:</p>
             <ul class="about-highlights">
               <li><i class="fas fa-paint-brush"></i> UI/UX Design</li>
@@ -222,6 +223,25 @@
             </div>
             <div class="project-links">
               <a href="https://www.figma.com/proto/GNBgihRD63soRn2iuPoH8q/Color-Crew?page-id=46%3A2&node-id=171-2&starting-point-node-id=171%3A2&t=XktVFFC8IvJHeiQJ-1" class="btn-small"><i class="fas fa-external-link-alt"></i> Prototype</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project-card" data-aos="fade-up" data-aos-delay="400">
+          <div class="project-image" data-aos="zoom-in" data-aos-delay="500">
+            <img src="./images/chatbot.png" alt="My Chatbot" loading="lazy">
+          </div>
+          <div class="project-content">
+            <h3>My Chatbot</h3>
+            <p>An AI-powered chatbot designed to assist users with various tasks and provide information seamlessly.</p>
+            <div class="project-tech">
+              <span>HTML</span>
+              <span>CSS</span>
+              <span>JavaScript</span>
+              <span>AI Integration</span>
+            </div>
+            <div class="project-links">
+              <a href="" class="btn-small"><i class="fas fa-external-link-alt"></i>Live Demo</a>
             </div>
           </div>
         </div>
