--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           </div>
         </div>
         <div class="hero-image" data-aos="fade-left">
-          <div class="profile-img hero-profile">
-            <img src="./images/profile.jpg" alt="Harish S - Professional Portrait" />
+          <div class="profile-img about-profile">
+            <img src="./images/me21.png" alt="Harish S - Professional Portrait" />
           </div>
         </div>
       </div>
@@ -76,7 +76,7 @@
       <div class="about-grid">
         <div class="about-image" data-aos="fade-right">
           <div class="profile-img about-profile">
-            <img src="./images/me21.png" alt="Harish S - Working" />
+            <img src="./images/me.jpg" alt="Harish S - Working" />
           </div>
         </div>
         <div class="about-content" data-aos="fade-left">
