--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <div class="project-tech">
               <span>HTML</span>
               <span>CSS</span>
-              <span>JavaScript</span>
+              <span>JS</span>
               <span>AI Integration</span>
             </div>
             <div class="project-links">
