--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
               <span>AI Integration</span>
             </div>
             <div class="project-links">
-              <a href="" class="btn-small"><i class="fas fa-external-link-alt"></i>Live Demo</a>
+              <a href="https://chatboth-bvfp.onrender.com" class="btn-small"><i class="fas fa-external-link-alt"></i>Live Demo</a>
             </div>
           </div>
         </div>
